# campus-life-events

./: AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  .env.local  .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix
backend/.sqlx/: query-00e6fe4f78e74165ec9452a0b326f3b35d8889783fa30daec92835df43c38f8f.json  query-0bd9de866430e447e3cf961dc93f6998a4ece57e903bd4f578c1ae94a8c2049a.json  query-0f1cc6ae0bb2408659b45e0259b718b0aaa583488fed15276c8835a62659e351.json  query-18655c02e02a9f87b45e28c502bd3b658ced3f15f06dfad40ad0454cb9941faa.json  query-1f32b01d249392a52045e750d3fdd1f212b298cfef8fb0f261384e0177822401.json  query-26c71f8f300d7c68a23eadecdd4cab6810732925641793cd1d8d854ae2a14682.json  query-2b38b0bacfe9f588ca148fab269617b8144b90385b454c1d670ac6fbc26ad433.json  query-2c4b7149de213862deaad346c3ec9f7063dc47d11f70bd191093328b611ea093.json  query-36f419b80046b37e4be461298a69d50a3cf6f2c082ebbd0aacb11da8a08216c9.json  query-385e6a07f0e9b7fd866515bb0f176fb06b55d40d4c18a0bc38e6e22a4e093bfe.json  query-387e8eab8aeaaee43952ef84ac1735df6f5e343455039f5dd443863b8f479f91.json  query-3a8b43d1061fe3990aef7149987f9aa0b5085d6c57e25c8434bf4bccefb6707d.json  query-3edb334af65f4c5d472bb430966954b7e3a4abf386573e7e1956745cd923ac93.json  query-462c2dff2d9f8070f90f85f911eb3311c9921db678384b09c137dbd6ad10cda8.json  query-4679f7c1ed2f8e93705d1a498c5558057785cb90298b51b008f5773aa454011b.json  query-4f1882c3b8790f8e7af5b2971d82c0ab0c3a708dbbfc3e22265caad83713f4c7.json  query-4f45c9504e810f06aa1bce474ce4df44829621ac5457fc2a491a01dd2e155513.json  query-4fd4b5c2cc6a0f3b48ef91479ff09dd9d6549998526f954ee1a078ac66742b40.json  query-54df0f56cd895ec2f4b92d28fb1a40d265e2a126c309873aab97a10d90403c5d.json  query-5729d48eebf2bef5d4319304f1d83ab184c34fce838d6e3b3460b77491395380.json  query-591e1464c64657b85907ba7a87fc5a9c74bdeda9501d9a8415b005eb5cfb3faa.json  query-5b87800c1e1b6d547ac13fb89a915b38bd3e993bc212533d27d26ad4c73c600c.json  query-5c5851252d464e16439dab469170d7d49b54a9203f9ad1947b889cc14aea6def.json  query-5cad7dd7922ac448af91c0980f2b06ed6036c46b81c91cc654e09371870fc4df.json  query-5e5419d801d20c3cc1d4a0fba5762036ea28d410e5cddef2dbba7c97d9f6b92d.json  query-5e76321c77201d3fe173307c9c6221c1d958b159ad74774d2eb59731ca1cb0e1.json  query-62e19c589b4da5ceff16818a8b563261ee7129ac1692e393d72e01199c247494.json  query-6338219e33aa026e99a875a38c8e5ef40ab046ae158eae902b1cb98c5191f100.json  query-6435c7de9f121dfdddeff67be14adaa27aa7c8c0ecb2df1a43df7a0886b55ea7.json  query-65a7c325aa235b11056716715ddac72f8f00db7286d535c6b69536cdbd8f454d.json  query-67a88d2337a0f4d4d3abbc06be9df6c7b2b485edda8b8b58e8960964ad04b307.json  query-6af6d12682b545e93accf5b12e5dd8c795ff8df46b13a75a62001aa4784b4e94.json  query-78e36a9cb01f49a38b733e292e69fb8f30cbbe2176f1ddc84af7417630c6cc02.json  query-7f0ee2e586c3938a79944f796be5e6d3da8e1365f99328de3ce0e5604ed8c1ca.json  query-80054f8cc8f02a7e5101089128d894db3f946c5554a1abdad9c4440d7c3be997.json  query-82374399fd4f35625acc2187f539e70b6fbde868c0179347c9b6c958dac0ec27.json  query-8424d99e45446003e6f8c7d89dfd2a76a79d6385c4bb9a4d94d77f98c534e587.json  query-879f3327e17693cfd345b032bec5304d5d0b7000ac951d652ade300e86b057fb.json  query-8993d82d8a3208043be1f9155d733b83f3daab3eb01efa63c8c9c79770e64cf9.json  query-91e47673fc5cf62a48986433da15213638150b1dc12a955d8d7f7a9f23f07c54.json  (+54 more)
backend/migrations/: 20250122000000_add_user_id_to_audit_log.down.sql  20250122000000_add_user_id_to_audit_log.up.sql  20250918110028_initial_schema.down.sql  20250918110028_initial_schema.up.sql  20250918160000_auth.down.sql  20250918160000_auth.up.sql  20250918170000_setup_token.down.sql  20250918170000_setup_token.up.sql  20250918180000_super_user.down.sql  20250918180000_super_user.up.sql  20250920120000_setup_token_expiry.down.sql  20250920120000_setup_token_expiry.up.sql  (+30 more)
(+147 files in other folders)
