[package]
name = "cl-backend"
version = "0.1.0"
edition = "2024"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "set-header"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
thiserror = "1.0.66"
redis = { version = "0.32.7", features = ["tokio-comp"] }
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
dotenv = "0.15.0"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
time = "0.3"
cookie = "0.18"
password_policy = "0.1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "rustls-native-certs", "aws-lc-rs"] }
base64 = "0.22"
rand = "0.8"
icalendar = "0.12"
chrono-tz = "0.10"
