[package]
name = "cl-backend"
version = "0.1.0"
edition = "2024"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
aws-lc-rs = "1.16.3"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "set-header"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
thiserror = "1.0.66"
redis = { version = "0.32.7", features = ["tokio-comp"] }
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std", "getrandom"] }
time = "0.3.47"
cookie = "0.18"
password_policy = "0.1"
lettre = { version = "0.11.20", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "rustls-native-certs", "aws-lc-rs"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
icalendar = "0.17"
chrono-tz = "0.10"
